--- a/source/scss/cagov/grid.scss
+++ b/source/scss/cagov/grid.scss
@@ -27,30 +27,22 @@
 
 .half {
     //@include make-sm-column(6);     // 50% wide columns same as bootstraps .col-sm-6
-    @include make-xs-column(12);
     @include make-sm-column(6); // Equivelent to .col-md-6
 }
 
 .third {
-    @include make-xs-column(12);
     @include make-sm-column(4); // Only specifying medium size grid. Small will collapse to single column only
 }
 
 .two-thirds {
-    @include make-xs-column(12);
     @include make-sm-column(8);
 }
 
 .quarter {
-    // full width on xs screens
-    @include make-xs-column(12);
-    // 2 column on small screens
-    @include make-sm-column(6);
-    // 4 column on medium and up
-    @include make-md-column(3);
+    @include make-xs-column(6); // make 2 column on extra small and small 
+    @include make-md-column(3); // 4 column on medium and up
 }
 .three-quarters {
-    @include make-xs-column(12);
     //@include make-sm-column(6);
     @include make-sm-column(9);
 }
