--- a/source/scss/cagov/alert-banner.scss
+++ b/source/scss/cagov/alert-banner.scss
@@ -7,21 +7,25 @@
     margin-bottom: 0;
     padding: 5px 0;
     border-radius: 0;
-	-webkit-column-rule: $text-field-color;
-	-moz-column-rule: $text-field-color;
+    -webkit-column-rule: $text-field-color;
+    -moz-column-rule: $text-field-color;
     column-rule: $text-field-color;
-	-webkit-transition: all 0.2s;
+    -webkit-transition: all 0.2s;
     transition: all 0.2s;
-    
+
     .close {
-        right: -10px;
-        opacity: 1;
+        position: relative;
+        top: 0;
+        right: -5px;
+        padding: 0 10px;
+        text-shadow: none;
     }
-	.container:after {
-		content: " ";
-		display: table;
-		clear:both;
-		}
+
+    .container:after {
+        content: " ";
+        display: table;
+        clear: both;
+    }
 }
 
 .alert-level {
