- Added profile banner background size property for backwards compatibility - Changed header's elements (utility header, nav, branding, mobile controls) width to 100% in mobile

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.8 -  7/2/2019 
+ * CA State Template v5 -  @version v5.0.8 -  7/3/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -11418,6 +11418,12 @@ code {
   }
 }
 
+@media (max-width: 767px) {
+  .branding {
+    max-width: 100%;
+  }
+}
+
 .header-cagov-logo img {
   top: 4px;
   height: 32px;
@@ -12527,6 +12533,12 @@ table.gsc-search-box td {
   }
 }
 
+@media (max-width: 767px) {
+  .main-navigation {
+    max-width: 100%;
+  }
+}
+
 .top-level-nav {
   list-style: none;
   margin: 0;
@@ -13363,6 +13375,12 @@ a.second-level-link [class^="ca-gov-icon-"] {
   outline: solid 2px #2ea3f2;
 }
 
+@media (max-width: 767px) {
+  .mobile-controls {
+    max-width: 100%;
+  }
+}
+
 .main-navigation .mobile-controls {
   text-align: left;
   background-color: #fff;
@@ -13613,6 +13631,9 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 @media (max-width: 767px) {
+  .utility-header .container {
+    max-width: 100%;
+  }
   .utility-header .social-media-links li {
     padding: 0 1px;
   }
@@ -16421,6 +16442,10 @@ hr.hr-light {
 
 .main-secondary > .profile-banner {
   margin-top: 23px;
+}
+
+.profile-banner .inner {
+  background-size: contain;
 }
 
 .banner-subtitle {
