--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -101,6 +101,10 @@
             padding-right: 150px;
         }
     }
+
+    @media (max-width: $screen-xs-max) {
+        max-width: 100%;
+    }
 }
 
 .header-cagov-logo img {	 // Beta 5.0 addition	
