--- a/source/scss/cagov/profiles.scss
+++ b/source/scss/cagov/profiles.scss
@@ -33,51 +33,54 @@ $profile-thumbnail: 70px;                                         // Thumbnail w
 // --------------------------------------------------
 
 .profile-banner {
-    background:#fff;                                            // Old browsers get solid white
-    background:rgba(255,255,255,0.5);                           // Background to be 50% white for modern browsers
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#80ffffff',GradientType=0 );    // IE6-9
-    border:1px solid $gray-lighter;
+    background: #fff; // Old browsers get solid white
+    background: rgba(255,255,255,0.5); // Background to be 50% white for modern browsers
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#80ffffff',GradientType=0 ); // IE6-9
+    border: 1px solid $gray-lighter;
     //border-radius:$border-radius-large;
     margin-bottom: 15px;
-    clear:both;                                                 // Keep floats from overlapping into profile-banner
-    
+    clear: both; // Keep floats from overlapping into profile-banner
     .main-secondary > & {
-        margin-top: $line-height-computed;                      // When banner is first item inside main-secondary
+        margin-top: $line-height-computed; // When banner is first item inside main-secondary
+    }
+    // backwards compatibility
+    .inner {
+        background-size: contain;
     }
 }
 
-.banner-subtitle {
-	@include font-size(.9);
-	margin:0 30px .2em 0;
-	padding:4px 35px 2px 10px;
-	background: -moz-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
-	background: -webkit-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
-	background: -o-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
-	background: -ms-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
-	background: linear-gradient(to right, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#20000000',endColorStr='#00000000', GradientType='1'); 
-}
-
-.banner-title {
-	@include font-condensed();
-	font-weight:bold;
-	color: $gray;
-	@include font-size(1.2);
-	padding-right:70px;
-	padding-left:10px;
-}
-
-.banner-link {
-	@include font-size(.7);
-	margin:0;
-	padding-left:12px;
-	padding-bottom:10px;
-	padding-top:10px;
-}
-
-.main-secondary .group {
     .banner-subtitle {
-        padding-right: 5px;
-        margin-right: 0;
+        @include font-size(.9);
+        margin: 0 30px .2em 0;
+        padding: 4px 35px 2px 10px;
+        background: -moz-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
+        background: -webkit-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
+        background: -o-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
+        background: -ms-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
+        background: linear-gradient(to right, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#20000000',endColorStr='#00000000', GradientType='1');
     }
-}
+
+    .banner-title {
+        @include font-condensed();
+        font-weight: bold;
+        color: $gray;
+        @include font-size(1.2);
+        padding-right: 70px;
+        padding-left: 10px;
+    }
+
+    .banner-link {
+        @include font-size(.7);
+        margin: 0;
+        padding-left: 12px;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+
+    .main-secondary .group {
+        .banner-subtitle {
+            padding-right: 5px;
+            margin-right: 0;
+        }
+    }
