Fixed focus outline in mobile. Added two more icons

--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.10 -  8/1/2019 
+ * CA State Template v5 -  @version v5.0.10 -  8/14/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
@@ -109,6 +109,10 @@ li[class^="et_fb_profile_banner"]::before {
   content: "\e960";
 }
 
+.ca-gov-icon-sea-level-rise-alt:before {
+  content: "\e96e";
+}
+
 .ca-gov-icon-severe-weather:before {
   content: "\e961";
 }
@@ -127,6 +131,10 @@ li[class^="et_fb_profile_banner"]::before {
 
 .ca-gov-icon-tsunami:before {
   content: "\e965";
+}
+
+.ca-gov-icon-tsunami-alt:before {
+  content: "\e96f";
 }
 
 .ca-gov-icon-volcano:before {
