--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.10 -  8/1/2019 
+ * CA State Template v5 -  @version v5.0.10 -  8/14/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -9463,6 +9463,10 @@ li[class^="et_fb_profile_banner"]::before {
   content: "\e960";
 }
 
+.ca-gov-icon-sea-level-rise-alt:before {
+  content: "\e96e";
+}
+
 .ca-gov-icon-severe-weather:before {
   content: "\e961";
 }
@@ -9481,6 +9485,10 @@ li[class^="et_fb_profile_banner"]::before {
 
 .ca-gov-icon-tsunami:before {
   content: "\e965";
+}
+
+.ca-gov-icon-tsunami-alt:before {
+  content: "\e96f";
 }
 
 .ca-gov-icon-volcano:before {
@@ -12712,8 +12720,8 @@ table.gsc-search-box td {
     padding-left: 5px;
     margin: 0 2px 0 2px;
   }
-  .first-level-link:first-child {
-    margin-top: 2px;
+  .first-level-link:focus {
+    outline-offset: -2px;
   }
   .first-level-link span[class^="ca-gov-icon"] {
     font-size: 24px;
@@ -13522,6 +13530,10 @@ a.second-level-link [class^="ca-gov-icon-"] {
   padding-left: 7px;
   border: none;
   line-height: 58px;
+}
+
+.mobile-control.toggle-sub-nav:focus {
+  outline-offset: -3px;
 }
 
 .mobile-control.toggle-sub-nav:active .rotate {
