--- a/source/scss/cagov/icon-font.scss
+++ b/source/scss/cagov/icon-font.scss
@@ -107,6 +107,10 @@ li[class^="et_fb_profile_banner"]::before {
     content: "\e960";
 }
 
+.ca-gov-icon-sea-level-rise-alt:before {
+    content: "\e96e";
+}
+
 .ca-gov-icon-severe-weather:before {
     content: "\e961";
 }
@@ -125,6 +129,10 @@ li[class^="et_fb_profile_banner"]::before {
 
 .ca-gov-icon-tsunami:before {
     content: "\e965";
+}
+
+.ca-gov-icon-tsunami-alt:before {
+    content: "\e96f";
 }
 
 .ca-gov-icon-volcano:before {
