--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -59,25 +59,29 @@
 // INDIVIDUAL CONTROLS
 .mobile-control {
     &.toggle-sub-nav { // Dynamic element $toggleSubNav placed before each .sub-nav element
-		position:absolute;
-		top: 0;
-		right: 2px;
+        position: absolute;
+        top: 0;
+        right: 2px;
         @include font-size(1.5);
-        width:80px;
-        text-align:center;
+        width: 80px;
+        text-align: center;
         cursor: pointer;
-		padding-left: 7px;
-		border:none;
-		line-height:58px;
-		
-		&:active {
-			.rotate { // preventing icon shifting on active state inn IE and FF
-				position:relative;
-				top: 0; 
-				left: 0;
-				}
-			}
-	}
+        padding-left: 7px;
+        border: none;
+        line-height: 58px;
+
+        &:focus {
+            outline-offset: -3px; // focus outline visibility
+        }
+
+        &:active {
+            .rotate { // preventing icon shifting on active state inn IE and FF
+                position: relative;
+                top: 0;
+                left: 0;
+            }
+        }
+    }
 }
 
 // IOS Icons FIX
