--- a/source/scss/cagov/navigation.scss
+++ b/source/scss/cagov/navigation.scss
@@ -121,8 +121,8 @@
         display: block;
         padding-left: 5px;
         margin: 0 2px 0 2px; // focus outline visibility
-        &:first-child {
-            margin-top: 2px; // focus outline visibility for the first item
+        &:focus {
+            outline-offset: -2px;
         }
 
         span[class^="ca-gov-icon"] {
