Fic hamburger menu button color contrast accessibility issue

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.10 -  8/14/2019 
+ * CA State Template v5 -  @version v5.0.10 -  8/22/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -13563,6 +13563,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer;
+  color: #fff;
 }
 
 #nav-icon3 span {
