--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -773,3 +773,21 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
     .gsc-input-box table td:nth-child(2), .gsib_b {
         display: none !important;
     }
+
+
+/* Full Width navigation search */
+@media (min-width: 768px) {
+    .full-width-nav .featured-search {
+        top: -65px;
+        right: 15px;
+        left: unset !important;
+        width: 40%;
+    }
+
+    .full-width-nav .featured-search input.search-textfield {
+        border: 1px solid !important;
+        border-color: #ccc !important;
+        border-radius: 4px;
+        padding: 0 10px 0 10px;
+    }
+}
