- Added 34 new icons to the CAWeb font library. - Fixed roles accessibility warnings in carousel’s control buttons, in navigation and in page regions.

--- a/source/scss/cagov/socialsharer.scss
+++ b/source/scss/cagov/socialsharer.scss
@@ -38,6 +38,16 @@
     @include social-media($share-twitter);
 }
 
+/* snapchat */
+.ca-gov-icon-share-snapchat {
+    @include social-media($share-snapchat);
+}
+
+/* youtube */
+.ca-gov-icon-share-youtube {
+    @include social-media($share-youtube);
+}
+
 /* GooglePlus */
 .ca-gov-icon-share-googleplus {
     @include social-media($share-googleplus);
