--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -22,7 +22,9 @@ $share-googleplus: #dc4a38;
 $share-youtube: #bb0000;
 $share-flickr: #0063dc;
 $share-linkedin: #0976b4;
-$share-instagram: #3f729b;
+$share-instagram: #C13584;
+$share-snapchat: #FFFC00;
+$share-youtube: #b31217;
 $share-pinterest: #cc2127;
 $share-vimeo: #1ab7ea;
 $share-email: #888;
