Added 3 more icons

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -9391,6 +9391,18 @@ ul.et-fb-font-icon-list li:after {
   speak: none;
 }
 
+.ca-gov-icon-update:before {
+  content: "\e994";
+}
+
+.ca-gov-icon-features:before {
+  content: "\e993";
+}
+
+.ca-gov-icon-accessibility:before {
+  content: "\e992";
+}
+
 .ca-gov-icon-collapse-all:before {
   content: "\e970";
 }
