Fixed mobile hamburger navigation misplacement issue that occurs with font increase settings functionality

--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -37,6 +37,9 @@
         border: none;
         background: none;
         cursor: pointer;
+        position: relative;
+        top: -8px;
+        text-align: right;
 
         &:focus {
             @include outline(2px);
