--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.11 -  10/3/2019 
+ * CA State Template v5 -  @version v5.0.11 -  10/21/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -13647,6 +13647,9 @@ a.second-level-link [class^="ca-gov-icon-"] {
   border: none;
   background: none;
   cursor: pointer;
+  position: relative;
+  top: -8px;
+  text-align: right;
 }
 
 .mobile-controls .toggle-search:focus {
