Updated jquery-migrate.js to version 3.1.0 -Fixed mobile hamburger navigation misplacement issue that occurs with settings font increase

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.8 -  10/14/2019 
+ * CA State Template v5.5 -  @version v5.5.8 -  11/14/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -13842,6 +13842,9 @@ a.second-level-link [class^="ca-gov-icon-"] {
   border: none;
   background: none;
   cursor: pointer;
+  position: relative;
+  top: -8px;
+  text-align: right;
 }
 
 .mobile-controls .toggle-search:focus {
@@ -14007,7 +14010,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .utility-header {
   top: 0;
   width: 100%;
-  min-height: 35px;
+  min-height: 38px;
   background: #046B99;
   color: #ffffff;
 }
@@ -14166,7 +14169,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 
 .header-cagov-logo img {
   top: 1px;
-  height: 27px;
+  height: 34px;
   left: 27px;
 }
 
@@ -14279,7 +14282,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .utility-header .flex-row .social-media-links .header-cagov-logo img {
-  top: 4px;
+  top: 1px;
   left: 0;
 }
 
