--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -39,6 +39,9 @@
         border: none;
         background: none;
         cursor: pointer;
+        position: relative;
+        top: -8px;
+        text-align: right;
 
         &:focus {
             outline: #2ea3f2 solid 2px;
