--- a/source/scss/cagov/alert-banner.scss
+++ b/source/scss/cagov/alert-banner.scss
@@ -48,25 +48,25 @@
 
 .alert-severe {
     background: $brand-highlight;
-    
+
     .close {
         color: $gray-base;
 		position:relative;
 		top:0;
 		right: -5px;
 		padding:0 10px;
-		text-shadow: none; 
+		text-shadow: none;
     }
-	
+
 .alert-level {
         color: $gray-base;
         background: rgba(0, 0, 0, 0.15);
 		}
-	
+
 	.alert-text {
       color: $gray-base;
     }
-		
+
 
 
 
@@ -82,7 +82,7 @@
     .alert-banner {
         opacity: 0;
         position: absolute;
-        width: 100%;
+        width: 0;
         height: 0;
     }
 	}
