--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -17,147 +17,147 @@ body {
     }
 }
 
-    a {
-        color: $link-color;
+a {
+    color: $link-color;
 
-        &:hover {
-            color: $link-hover-color;
-        }
+    &:hover {
+        color: $link-hover-color;
     }
+}
 
-    .featured-narrative {
-        border-bottom: 1px solid #d6d6d6;
-        border-top: 1px solid #d6d6d6;
-        padding: 10px 10px 0 10px;
-        margin-bottom: ($line-height-computed / 2);
-        margin-left: 20px;
+.featured-narrative {
+    border-bottom: 1px solid #d6d6d6;
+    border-top: 1px solid #d6d6d6;
+    padding: 10px 10px 0 10px;
+    margin-bottom: ($line-height-computed / 2);
+    margin-left: 20px;
+}
+
+//
+// TYPOGRAPHY
+// --------------------------------------------------
+
+
+p {
+    margin-bottom: 0.7rem;
+}
+
+.ie9 p {
+    + h1, + h2, + h3, + h4 {
+        padding-top: 10px; // Add top padding back into ie9's headers
     }
+}
 
-    //
-    // TYPOGRAPHY
-    // --------------------------------------------------
-
-
-    p {
-        margin-bottom: 0.7rem;
+h1, .h1 {
+    //color: #c60; // Orange
+    span[class^="ca-gov-icon-"]:first-child {
+        display: none; // hide icon used in v4
     }
+}
 
-    .ie9 p {
-        + h1, + h2, + h3, + h4 {
-            padding-top: 10px; // Add top padding back into ie9's headers
-        }
-    }
+// OVER RIDE BOOTSTRAP SIZES
+h1, .h1 {
+    @include font-size(2.4);
+    margin-top: 0.67em;
+    margin-bottom: 0.55em;
+    font-family: $headings-font-family;
+}
 
+h2, .h2 {
+    @include font-size(1.94);
+    margin-top: 0.83em;
+    margin-bottom: 0.7em;
+    font-family: $headings-font-family;
+}
+
+h3, .h3 {
+    @include font-size(1.54);
+    margin-top: 1em;
+    margin-bottom: 0.7em;
+    font-family: $headings-font-family;
+}
+
+h4, .h4 {
+    @include font-size(1.25);
+    margin-top: 1.33em;
+    margin-bottom: 1em;
+    font-family: $headings-font-family;
+}
+
+h5, .h5 {
+    @include font-size(1);
+    margin-top: 1.67em;
+    margin-bottom: 1.3em;
+    font-family: $headings-font-family;
+}
+
+h6, .h6 {
+    @include font-size(0.8);
+    margin-top: 1.67em;
+    margin-bottom: 1.3em;
+    font-family: $headings-font-family;
+}
+
+@media (max-width: $screen-xs-max) {
+    // LARGER HEADING SIZE FOR MOBILE
     h1, .h1 {
-        //color: #c60; // Orange
-        span[class^="ca-gov-icon-"]:first-child {
-            display: none; // hide icon used in v4
-        }
-    }
-
-    // OVER RIDE BOOTSTRAP SIZES
-    h1, .h1 {
-        @include font-size(2.4);
-        margin-top: 0.67em;
-        margin-bottom: 0.55em;
-        font-family: $headings-font-family;
+        @include font-size(2.5);
     }
 
     h2, .h2 {
-        @include font-size(1.94);
-        margin-top: 0.83em;
-        margin-bottom: 0.7em;
-        font-family: $headings-font-family;
+        @include font-size(2);
     }
 
     h3, .h3 {
-        @include font-size(1.54);
-        margin-top: 1em;
-        margin-bottom: 0.7em;
-        font-family: $headings-font-family;
+        @include font-size(1.6);
     }
 
     h4, .h4 {
-        @include font-size(1.25);
-        margin-top: 1.33em;
-        margin-bottom: 1em;
-        font-family: $headings-font-family;
+        @include font-size(1.3);
+    }
+}
+
+
+// ICON SIZING
+[class*="icon-"] {
+    &.big {
+        @include font-size(1.94);
     }
 
-    h5, .h5 {
-        @include font-size(1);
-        margin-top: 1.67em;
-        margin-bottom: 1.3em;
-        font-family: $headings-font-family;
+    &.bigger {
+        @include font-size(2.4);
     }
 
-    h6, .h6 {
-        @include font-size(0.8);
-        margin-top: 1.67em;
-        margin-bottom: 1.3em;
-        font-family: $headings-font-family;
+    &.biggest {
+        @include font-size(3.5);
     }
+}
 
-    @media (max-width: $screen-xs-max) {
-        // LARGER HEADING SIZE FOR MOBILE
-        h1, .h1 {
-            @include font-size(2.5);
-        }
+.serif {
+    font-family: $font-family-serif !important;
+}
 
-        h2, .h2 {
-            @include font-size(2);
-        }
+.monospace {
+    font-family: $font-family-monospace !important;
+}
 
-        h3, .h3 {
-            @include font-size(1.6);
-        }
+.heading {
+    font-family: $headings-font-family !important;
+}
 
-        h4, .h4 {
-            @include font-size(1.3);
-        }
-    }
+code {
+    color: $code-color;
+}
 
-
-    // ICON SIZING
-    [class*="icon-"] {
-        &.big {
-            @include font-size(1.94);
-        }
-
-        &.bigger {
-            @include font-size(2.4);
-        }
-
-        &.biggest {
-            @include font-size(3.5);
-        }
-    }
-
-    .serif {
-        font-family: $font-family-serif !important;
-    }
-
-    .monospace {
-        font-family: $font-family-monospace !important;
-    }
-
-    .heading {
-        font-family: $headings-font-family !important;
-    }
-
-    code {
-        color: $code-color;
-    }
-
-    // pre-wrap class
-    .wrap {
-        white-space:normal !important;
-    }
+// pre-wrap class
+.wrap {
+    white-space: normal !important;
+}
 
 
 
 
-// LINKS NEED VISUAL INDICATORS OTHER THAN COLOR (USING UNDERLINE MIXING) 
+// LINKS NEED VISUAL INDICATORS OTHER THAN COLOR (USING UNDERLINE MIXING)
 .main-content {
     @include underline($link-color, $link-hover-color);
 }
@@ -171,3 +171,20 @@ li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordio
     text-decoration: none !important;
     background-image: none !important;
 }
+
+// group lists (sidebar navigation)
+.list-group {
+    padding-left: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.list-group-item {
+    padding-top: ($spacer * .75) !important;
+    padding-bottom: ($spacer * .75) !important;
+    padding-left: ($spacer * 1.25) !important;
+    padding-right: ($spacer * 1.25) !important;
+    margin-bottom: -1px !important;
+    margin-top: 0 !important;
+    background-image: none !important;
+}
+
