Adjusted form control styles

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -18018,6 +18018,11 @@ input:focus, textarea:focus, button:focus, select:focus {
   outline: solid 2px #2ea3f2;
 }
 
+/* bootstrap 4.4.1 adjustments */
+.input-group > .form-control {
+  flex: 1 1 0% !important;
+}
+
 /* -----------------------------------------
    PUBLICATIONS /source/scss/cagov/publications.scss
 ----------------------------------------- */
