--- a/source/scss/cagov/forms.scss
+++ b/source/scss/cagov/forms.scss
@@ -351,3 +351,8 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
 input:focus, textarea:focus, button:focus, select:focus {
     @include outline(2px);
 } 
+
+/* bootstrap 4.4.1 adjustments */
+.input-group > .form-control {
+    flex: 1 1 0% !important;
+}
