--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.11 -  12/30/2019 
+ * CA State Template v5.5 -  @version v5.5.11 -  1/7/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.4.1 - /source/scss/bootstrap/ 
@@ -14679,14 +14679,12 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .section .parallax-bg {
-  background-position: center top;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  bottom: 0;
-  left: 0;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 300%;
 }
 
 .section .parallax-bg ~ .container {
