Added scticky footer sample page

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.11 -  1/7/2020 
+ * CA State Template v5.5 -  @version v5.5.11 -  1/16/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.4.1 - /source/scss/bootstrap/ 
@@ -12089,6 +12089,17 @@ code {
   .global-footer .footer-links {
     margin-top: 1rem !important;
   }
+}
+
+.sticky-footer {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: visible;
+}
+
+.sticky-footer .main-content {
+  min-height: unset;
 }
 
 /* -----------------------------------------
