--- a/source/scss/cagov/global-footer.scss
+++ b/source/scss/cagov/global-footer.scss
@@ -71,3 +71,15 @@
         }
     }
 
+/* sticky footer */
+.sticky-footer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh; // Avoid the IE 10-11 `min-height` bug
+    overflow:visible;
+}
+
+.sticky-footer .main-content {
+    min-height: unset;
+}
+
