--- a/source/scss/cagov/sections.scss
+++ b/source/scss/cagov/sections.scss
@@ -21,12 +21,14 @@
     }
 
     .parallax-bg {
-        background-position: center center;
+        background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
+        bottom: 0;
+        left: 0;
         position: absolute;
         width: 100%;
-        height: 300%;
+        height: 100%;
 
         ~ .container {
             position: relative; // Needed so text appeard above background
