Adjusted side navigation border bottom styles

--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -183,8 +183,15 @@ li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordio
     padding-bottom: ($spacer * .75) !important;
     padding-left: ($spacer * 1.25) !important;
     padding-right: ($spacer * 1.25) !important;
-    margin-bottom: -1px !important;
+   // margin-bottom: -1px !important;
     margin-top: 0 !important;
     background-image: none !important;
+}
+
+a.list-group-item {
+    margin-bottom:0px !important;
+}
+.tab.list-group-item {
+    margin-bottom: -1px !important;
 }
 
