--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -11117,9 +11117,16 @@ code {
   padding-bottom: 0.75rem !important;
   padding-left: 1.25rem !important;
   padding-right: 1.25rem !important;
-  margin-bottom: -1px !important;
   margin-top: 0 !important;
   background-image: none !important;
+}
+
+a.list-group-item {
+  margin-bottom: 0px !important;
+}
+
+.tab.list-group-item {
+  margin-bottom: -1px !important;
 }
 
 /* -----------------------------------------
