--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -236,3 +236,19 @@
 
 }
 
+/* mobile controls hack for IE because IE never dies */
+@media all and (-ms-high-contrast:none) {
+    .mobile-controls .toggle-search {
+        position: absolute;
+        right: 70px;
+        top: 10px;
+    }
+    /* IE10 */
+    *::-ms-backdrop, .mobile-controls .toggle-search {
+        position: absolute;
+        right: 70px;
+        top: 10px;
+    }
+    /* IE11 */
+}
+
