--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -792,6 +792,59 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
         border-radius: 4px;
         padding: 0 10px 0 10px;
     }
+
+    /* full width featured search hack for IE */
+    @media all and (-ms-high-contrast:none) {
+        .full-width-nav .featured-search {
+            width: 100%;
+            max-width: 100%;
+            padding-right:15px;
+
+            .container {
+                width: 40%;
+                float: right;
+            }
+        }
+
+        *::-ms-backdrop, .full-width-nav .featured-search {
+            width: 100%;
+            max-width: 100%;
+            padding-right: 15px;
+
+            .container {
+                width: 40%;
+                float: right;
+            }
+        }
+    }
+}
+
+
+@media (min-width: $screen-sm-min) and (max-width: $screen-md-min) {
+    /* full width featured search hack for IE */
+    @media all and (-ms-high-contrast:none) {
+        .full-width-nav .featured-search {
+            width: 100%;
+            max-width: 100%;
+            padding-right: 15px;
+
+            .container {
+                width: 40%;
+                float: right;
+            }
+        }
+
+        *::-ms-backdrop, .full-width-nav .featured-search {
+            width: 100%;
+            max-width: 100%;
+            padding-right: 15px;
+
+            .container {
+                width: 40%;
+                float: right;
+            }
+        }
+    }
 }
 
 /* search box icons for mobile */
